kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-postgres-deployment
  labels:
    name: todo-postgres
    app: todo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: todo-postgres
      app: todo
  template:
    metadata:
      labels:
        name: todo-postgres
        app: todo
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: todo
            - name: POSTGRES_PASSWORD
              value: test
            - name: POSTGRES_USER
              value: postgres
          image: postgres:15-alpine
          name: todo-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
