kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-next-service
  labels:
    name: todo-next
    app: todo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: todo-next
    app: todo
