kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todo-postgres
    app: todo
  name: todo-postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    name: todo-postgres
    app: todo
